2010-07-27	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1631/testing
	* gxx02/init.c, gxx02/gxx02.scn, gxx02/gxx02.doc,
	gxx02/Makefile.am, gxx02/gxx_wrappers.h: New test added
	* Makefile.am, configure.ac: Changes to accommodate new tests

2010-07-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1632/testing
	* Makefile.am, configure.ac: Make dedicated fatal error test for
	/dev/null already registered. Using code from Bharath in new test
	framework.
	* devnullfatal01/.cvsignore, devnullfatal01/Makefile.am,
	devnullfatal01/devnullfatal01.doc, devnullfatal01/devnullfatal01.scn,
	devnullfatal01/testcase.h: New files.

2010-07-27	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1632/testing
	* devfs04/init.c, devfs04/test_driver.c: Added cases to exercise
	null_initialize() and null_write().

2010-07-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* gxx01/gxx01.scn, gxx01/init.c: Remove local _exit().

2010-07-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* gxx01/gxx01.scn, gxx01/init.c: Add test f0r rtems_gxx_key_dtor().

2010-07-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* gxx01/gxx01.scn, gxx01/init.c: Add more testcases.

2010-07-22	Bharath Suri <bharath.s.jois@gmail.com>

	* devfs02/init.c, devfs02/devfs02.doc, devfs02/devfs02.scn,
	devfs02/Makefile.am: New tests added
	* devfs03/init.c, devfs03/devfs03.doc, devfs03/devfs03.scn,
	devfs03/Makefile.am: New tests added
	* devfs04/init.c, devfs04/devfs04.doc, devfs04/devfs04.scn,
	devfs04/Makefile.am: New tests added
	* Makefile.am, configure.ac: Changes to accommodate the above
	newly added tests.

2010-07-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, termios06/init.c: Add initial tests for
	XON/XOFF and VMIN/VMAX cases.
	* termios07/.cvsignore, termios07/Makefile.am, termios07/init.c,
	termios07/termios07.doc, termios07/termios07.scn,
	termios08/.cvsignore, termios08/Makefile.am, termios08/init.c,
	termios08/termios08.doc, termios08/termios08.scn: New files.
