@@ -66,6 +66,8 @@ rtmonuse/Makefile
 stackchk/Makefile
 stackchk01/Makefile
 stringto01/Makefile
+tar01/Makefile
+tar02/Makefile
 tar03/Makefile
 termios/Makefile
 termios01/Makefile
